--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -23,7 +23,7 @@
   height: 100%;
   border-radius: 100%;
   border: 10px solid transparent;
-  border-top-color: #3498db;
+  border-top-color: #69f069;
 }
 
 #loader-1:before{
